March 2023 8.3
  - Windows users: display name can be hidden in server profile
  - RPM package cleanup
  - LAM Pro:
   -> Custom scripts: new wildcard INFO.lamLoginDn for current user
   -> PPolicy: allow password policy for groups


13.12.2022 8.2
  - PHP 7.4 required
  - Usability improvements
  - DHCP: added "authoritative" option and extra DHCP options + statements
  - LAM Pro:
   -> Group of (unique) names/members, Apache Guacamole: support "seeAlso" attribute (hidden by default in server profile)
   -> Windows: self service: users with expired passwords or forced password change can update their password (requires bind user to be used for all operations)


22.09.2022 8.1
  - Allow hostObject for groups and ":" in values
  - Docker: added Let's Encrypt CA certificates
  - LAM Pro:
   -> Added support for simpleSecurityObject
   -> Added support for Apache Guacamole
   -> Group of Names: save last selected account type for new members/owners (170)
  - Fixed bugs:
   -> PHP 8.1 does not show proper error message when login failed with LDAP search method
   -> Self service issues on PHP 8.1 (181)
   -> Custom Fields: switch to Custom Fields tab was required to save an entry (258)
   -> Group of unique names/members shared same configuration settings with group of names
   -> Shadow last password change not updated during self service password change


29.06.2022 8.0.1
  - Fixed bugs:
   -> Regression issues due to security fixes (e.g. module settings in server profile)
   -> Password change page not working for access level "Change passwords"


27.06.2022 8.0
  - PHP 8.1 compatibility
  - Extended user account status and locking options
  - Unix: added Gecos to profile editor
  - 389ds: added hints why login failed if account is locked/deactivated/expired
  - Removed Zarafa support (please switch to Kopano)
  - Tree view: display binary data as base64 encoded text
  - Tree view: better support for move operations and ordered attributes
  - LAM Pro: