@@ -3,7 +3,8 @@ March 2023 8.3
   - RPM package cleanup
   - LAM Pro:
    -> Custom scripts: new wildcard INFO.lamLoginDn for current user
-   -> PPolicy: allow password policy for groups
+   -> PPolicy: allow password policy for groups and hosts
+   -> Simple security object: allow for hosts
 
 
 13.12.2022 8.2
